Exercise 1 Font Optimization self hosting.

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,15 @@
       content="width=device-width, initial-scale=1"
     />
     <title>Unsprinkle</title>
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <style>
+      @font-face {
+        font-family: "Inter";
+        font-weight: 100 900;
+        font-style: normal;
+        font-display: swap;
+        src: url("/fonts/Inter-variable-optimized.woff2") format("woff2");
+      }
+    </style>
   </head>
 
   <body>
